--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.3'
 
 services:
   docker-sync:
@@ -7,18 +7,22 @@ services:
       dockerfile: Dockerfile
     image: docker-image-sync:latest
     container_name: docker-image-sync
+      # 修改为python3启动，定时清理镜像
+      command: python3 app.py
     ports:
       - "5000:5000"
     volumes:
       - ./config:/app/config:ro
       - sync_logs:/app/logs
       - sync_downloads:/app/downloads
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+      #- /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
       - FLASK_ENV=production
       - PYTHONUNBUFFERED=1
       - SKOPEO_DISABLE_SSL_VERIFY=false
       - LOG_LEVEL=INFO
+      - CLEANUP_INTERVAL=6  # 清理间隔（小时）
+      - MAX_FILE_AGE=24    # 文件最大保留时间（小时）
     restart: unless-stopped
     networks:
       - docker-sync-network
@@ -27,7 +31,6 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
     deploy:
       resources:
         limits:
