feat: 增加镜像同步超时时间，优化WebSocket断线重连处理及智能轮询功能

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./config:/app/config:ro
+      - ./config:/app/config
       - sync_logs:/app/logs
       - sync_downloads:/app/downloads
       #- /var/run/docker.sock:/var/run/docker.sock:ro
